<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">Delinquencity</string>
    <string name="action_help">Help</string>
    <string name="start_button">Play</string>
    <string name="mode">Character</string>
    <string name="speed">Speed</string>
    <string name="area">Area</string>
    <string name="howTo">How To Play</string>
    
    <string name="game_mode_title">Character</string>
    <string-array name="game_modes">
        <item>Robber</item>
        <item>Cop</item>
    </string-array>
    <string name="game_difficulty_title">Speed</string>
    <string-array name="game_difficulties">
        <item>Grandpa</item>
        <item>Average</item>
        <item>Marathon</item>
    </string-array>
	<string name="game_radius_title">Area</string>
    <string-array name="game_radiuses">
        <item>Tiny</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Massive</item>
    </string-array>
    <color name="startColor">#98bbdc</color>
    <color name="endColor">#c2def8</color>
    <color name="strokeColor">#000000</color>
</resources>
